--- a/gb/24/2/6/n14174477.md
+++ b/gb/24/2/6/n14174477.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【历史的瞬间】路易威登：人的一生，就是一次旅行</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174563-000_Par2719035-600x400.jpg" />///image2=```diff
 - 路易威登以旅行箱起家，始终保有一份文化理念，那就是“旅行哲学”。图为巴黎香榭丽舍大街上的路易威登专卖店。(Pierre Verdy/AFP)
@@ -10,7 +10,7 @@
 <hr>
 <p>1835年法国的一个清晨，一个14岁的小男孩和父亲做了简短的告别，开始了生命的新旅程。他脚蹬铁皮鞋，把行李捆绑在木棍上，再扛在肩上，带着几个法郎，还有在父亲的作坊里学来的手艺，离开故乡，从法国东部的小村庄如拉（Jura）朝巴黎出发。</p>
 <p>他并不是唯一徒步旅行的人，在路途中有朝圣者、商人、流动商贩各种不同身份的旅行者。有时贵族乘坐的马车，会从身边疾驶而过，马蹄甩出来的泥水，沾上不及躲闪的少年叛逆而卷曲的头发上，此刻的少年并不知道，他的一生将与贵族和品味画上等号。</p>
-<p>他的体格强健，然而他的双手却是无比的灵巧。他的性格如同他的外貌，果敢而严谨。他的名字路易．威登，大家都熟悉的LV品牌创始人Luis Vuitton。</p>
+<p>他的体格强健，然而他的双手却是无比的灵巧。他的性格如同他的外貌，果敢而严谨。他的名字路易．威登，大家都熟悉的LV品牌创始人Louis Vuitton。</p>
 <p>路易的父母亲是农民，他们有个磨坊，在麦子收割后的季节就用磨坊的水轮动力锯木头。小路易没去上学。他所有的本事，就是父亲告诉他的每种木头的用途和坚韧度：</p>
 <p>“孩子，木头是有生命的。榉木，你要先跟它说话，它要是‘叽叽喳喳’的，就只能当门板，要是它害羞不回答，那就要小心的环切，能看见好看的山纹，那是神父和城里的贵族喜欢用的材料；橡木做家俱，北方人能用，要是戛纳来的客人就别给他们了，那边太阳大，过不了两年就裂开了。还是留着做酒桶，橡木生来就是葡萄的好丈夫，它能陪着葡萄酒过一辈子。”</p>
 <h2><strong>在巴黎展开人生旅程 </strong></h2>
@@ -20,12 +20,12 @@
 <p>1848年的春天，一个黄昏，路易．威登去给俄国大使夫人装行李箱，从位于旺多姆广场的俄国大使馆出来，听到一阵枪响，路易赶紧躲在一个门廊下，原来他正好遇上了二月革命。第二天早上，法王路易．菲利普一世（Louis Philippe I）退位，法兰西第二共和国宣告成立。</p>
 <p>法国二月革命前几天，马克思的《共产党宣言》刚出版，破坏和打碎国家机器的主张，开始在欧洲像幽灵一样舞动起来，法国政府意识到这种危险的、充满仇恨的思想之后，驱逐了马克思。路易．威登也不喜欢马克思要无产阶级团结起来一起消灭剥削阶级的主张，他能认识的剥削阶级就是马雷夏尔先生，马雷夏尔对他很好，薪水也很合理，他从事自己喜爱的木工，学习做生意的技巧，甚至可以为木箱店的运作出主意。</p>
 <h2><strong>父承子业 L V配合搭成花朵图案</strong></h2>
-<figure id="attachment_14174596" aria-describedby="caption-attachment-14174596" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/02/id14174596-000_8TG2GV.jpg"><img class="size-medium wp-image-14174596" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174596-000_8TG2GV-450x450.jpg" alt="" width="450" b="450" /></a><figcaption id="caption-attachment-14174596" class="wp-caption-text">乔治．威登用父亲姓名中的简写L及V配合搭成花朵图案，设计出蜚声国际的交织字母。图为1965年5月，时尚模特儿在奥利机场展示<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B7%AF%E6%98%93%E5%A8%81%E7%99%BB.md#1">路易威登</a>行李箱。（AFP）</figcaption></figure>
+<figure id="attachment_14174596" aria-describedby="caption-attachment-14174596" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/02/id14174596-000_8TG2GV.jpg"><img decoding="async" class="size-medium wp-image-14174596" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174596-000_8TG2GV-450x450.jpg" alt="" width="450" b="450" /></a><figcaption id="caption-attachment-14174596" class="wp-caption-text">乔治．威登用父亲姓名中的简写L及V配合搭成花朵图案，设计出蜚声国际的交织字母。图为1965年5月，时尚模特儿在奥利机场展示路易威登行李箱。（AFP）</figcaption></figure>
 <p>1852年，拿破仑三世（Louis Napoleon Bonaparte）登基，路易．威登被选为王后的御用包装工，从此涉足上流社会。美貌王后欧仁妮（Eugénie de Montijo）非常注重穿着打扮。王后的每次出行，都得装上十几个箱子。路易．威登就发现了，原来的箱子都有一个拱形，放在家里好看，要是旅行起来就麻烦了，为什么？</p>
 <p>它不好叠着放呀，只能在地上放一排。于是，路易．威登在巴黎开了第一间店铺，专做平顶箱。路易．威登打造制作的皮箱技术精良，在当时的巴黎名气非常响亮。进而使LV成为皮制旅行用品最精致的象征。王公贵族专门订购路易．威登的皮箱。</p>
 <p>1880年，路易的儿子乔治（Georges Vuitton）结婚。在婚礼当天，老路易将位于斯格里布大街的总店正式移交给儿子乔治。</p>
 <p>乔治不负父亲的期望。1888年，乔治．威登推出威登皮箱的新设计。他将箱子的表面设计成西洋跳棋棋盘风格，颜色则是棕色和栗色相间。父亲姓名中的简写L及V配合搭成花朵图案，设计出到今天仍蜚声国际的交织字母。</p>
-<p>1892年，路易．威登的事业做大了，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B7%AF%E6%98%93%E5%A8%81%E7%99%BB.md#1">路易威登</a>在这一年有两件大事：第一件大事是开始推出手提包，之后的一百年，路易威登的手提包长盛不衰；第二件事情是2月27日老路易在家中去世。这个百年老店开始从第一代人手中交到了后来人手里，继续它的辉煌。</p>
+<p>1892年，路易．威登的事业做大了，路易威登在这一年有两件大事：第一件大事是开始推出手提包，之后的一百年，路易威登的手提包长盛不衰；第二件事情是2月27日老路易在家中去世。这个百年老店开始从第一代人手中交到了后来人手里，继续它的辉煌。</p>
 <h2><strong>“旅行哲学” 始终的</strong><strong>文化理念</strong></h2>
 <p>路易威登以旅行箱起家，始终保有一份文化理念，那就是“旅行哲学”。每一年，LV会举办LV杯及美洲杯帆船赛、LV古董车车展，以及出版品牌专属的世界城市旅行指南（cityguide）、旅游随想录及Voyageravec，不断重新阐释旅行的精髓。</p>
 <p>近些年，大量的中国人喜欢上了路易威登。在巴黎香舍丽榭大街的路易威登旗舰店里，中国人快乐的穿梭着，就像在海鲜市场一样大声大方的刷卡，不知这里面有多少仅仅是跟风，仅仅是认为拥有一份花很多钱买来的奢侈品，带来的一种让别人“咂吧咂吧”嘴流口水的土豪体验。</p>
@@ -35,46 +35,45 @@
 <p>还有什么东西能留下来呢？当抵达现场的搜救队伍捞起了载浮载沉在海上的路易威登硬壳行李箱，打开来一看，里面竟然滴水未进！</p>
 <p>品质及尊贵的传统，是路易威登的最大信仰，百年来不曾改变。</p>
 <p>Louis Vuitton，路易威登：人的一生，就是一次旅行，你希望你的行李箱里装些啥呢？＠*</p>
-<figure id="attachment_14174594" aria-describedby="caption-attachment-14174594" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/02/id14174594-87e77ecb316f05bcf8c451faf2900503.jpg"><img class="size-large wp-image-14174594" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174594-87e77ecb316f05bcf8c451faf2900503-600x279.jpg" alt="" width="600" b="279" /></a><figcaption id="caption-attachment-14174594" class="wp-caption-text">（江峰时刻提供）</figcaption></figure>
+<figure id="attachment_14174594" aria-describedby="caption-attachment-14174594" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/02/id14174594-87e77ecb316f05bcf8c451faf2900503.jpg"><img decoding="async" class="size-large wp-image-14174594" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174594-87e77ecb316f05bcf8c451faf2900503-600x279.jpg" alt="" width="600" b="279" /></a><figcaption id="caption-attachment-14174594" class="wp-caption-text">（江峰时刻提供）</figcaption></figure>
 <p>——转载自《<ahref="https://www.epochweekly.com/">新纪元</a>》</p>
-<p><a title="LV 路易威登||土豪体验与历史沉淀 (历史上的今天20190227第293期)" src=""></a><a href="https://db1uzmukbk5lb.cloudfront.net/D6ydQKdyq"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/6LaaDgMGiks" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a loading="lazy" title="LV 路易威登||土豪体验与历史沉淀 (历史上的今天20190227第293期)" src=""></a><a href="https://d2b68ib2p4x8t6.cloudfront.net/M4tN991Dn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/6LaaDgMGiks" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>责任编辑：王堇＃</p>
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14092136.md#1">【历史的瞬间】林语堂 信仰和传统的启蒙与回归</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126419.md#1">【历史的瞬间】神风特攻队 传统和信仰被扭曲成政治符号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/3/n10022013.md#1">从宝莱坞到好莱坞 名人发型师揭秘灵感之源</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/7/17/n9421155.md#1">超模可儿婚礼照曝光 婚纱灵感来自摩纳哥王妃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/10/23/n8422910.md#1">已过知天命仍活跃  名模卡罗阿尔特</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/10/12/n8388783.md#1">组图：22位当代成功人士 起床早得想不到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/9/26/n8337314.md#1">蔡和平：Do the Best从未变过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/3/n7796962.md#1">组图：2016“时尚界奥斯卡”群星闪熠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/11/27/n4583058.md#1">Max Mara的时尚密码：热爱艺术 关怀女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/10/n14092136.md#1">【历史的瞬间】林语堂 信仰和传统的启蒙与回归</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/29/n14126419.md#1">【历史的瞬间】神风特攻队 传统和信仰被扭曲成政治符号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/3/n10022013.md#1">从宝莱坞到好莱坞 名人发型师揭秘灵感之源</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/7/17/n9421155.md#1">超模可儿婚礼照曝光 婚纱灵感来自摩纳哥王妃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/23/n8422910.md#1">已过知天命仍活跃  名模卡罗阿尔特</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/12/n8388783.md#1">组图：22位当代成功人士 起床早得想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/9/26/n8337314.md#1">蔡和平：Do the Best从未变过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/3/n7796962.md#1">组图：2016“时尚界奥斯卡”群星闪熠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/11/27/n4583058.md#1">Max Mara的时尚密码：热爱艺术 关怀女性</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/22/n10927236.md#1" target="_blank">共产暴政录：文革初北京昌平和大兴县大屠杀</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/18/n14183795.md#1">“断舍离”转换生命流动能量 转出好人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/16/n14182095.md#1">【未解之谜】河北高人预言 大劫景象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179409.md#1">年年有余 古人期待的不是鱼是什么呢？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184588.md#1">地外金属现身3000年前西班牙黄金宝藏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179421.md#1">八百年前预言应验 唐代高僧一行校正历书日差</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185310.md#1">【秦鹏观察】王毅出访无功返 西方定对华新策略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/21/n14185945.md#1">【净园财经】过年消费降级 中共数据难掩衰退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185163.md#1">【人物真相】胡舒立与她心中的“啄木鸟”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184594.md#1">分析：C919现身海外航展 有两大劣势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/18/n14183930.md#1">世界经济渐与中国脱钩 根源是什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185034.md#1">河南重大血案 凶手“见人就杀 见物就烧”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184462.md#1">刘雨欣自曝洛杉矶豪宅遭洗劫 财物损失数千万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184670.md#1">马思纯半年瘦身25公斤 减肥食谱惊呆网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185351.md#1">刘少奇特型演员郭连文去世 两人阳寿相同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184617.md#1">看泰勒丝演唱会座位掀论战 周杰伦呛翻墙网军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185281.md#1">汤唯与全智贤同框 冬夏两季造型惊艳全场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/21/n14185637.md#1">专家：旅行时不要使用侧边坚硬的黑色行李箱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172065.md#1">为何叶绿素受宠？除了抗癌 还有这些好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/14/n14180430.md#1">每天半勺！78岁名设计师用了它比年轻人还年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14172943.md#1">这时间睡肚子小一圈! 4分钟提升代谢力、速效燃脂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14184955.md#1">如何赶走花园里的老鼠？专家教你天然方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276851.md#1">【杨延昭传奇】杨延昭威震三关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283942.md#1">【菁英论坛】官场为何真假难辩 假派出所的启示</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282650.md#1">【全球新闻】首位遭中共活摘器官幸存者现身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283753.md#1">【舞蹈】飞天大学2024第一学期舞蹈考试（高班 女生）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282852.md#1">传中金员工房贷压力大 降薪后跳楼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282124.md#1">北大经济学家：中国房价再跌40% 房市才矫正</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282080.md#1">《鬼灭之刃 柱训练篇》影评：高强度训练 为大战做热身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281392.md#1">14天旅游只需带一个背包 打包行李8秘诀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/6/n14174477.htm">【历史的瞬间】路易威登：人的一生，就是一次旅行</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/6/n14174477.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/6/n14174477.htm">【历史的瞬间】路易威登：人的一生，就是一次旅行</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/6/n14174477.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
